Fixed alignment of raw button on ratio display using flexbox

--- a/www/css/ratio_display.css
+++ b/www/css/ratio_display.css
@@ -1,3 +1,12 @@
+.tree-node-button {
+	display: inline-flex;
+	align-items: center;
+}
+
+.flex-spacer {
+	flex-grow: 1;
+}
+
 .tree-node-raw-toggle {
 	float: right;
 	width: auto;
